<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_add_employee"
    android:orientation="vertical">

    <include layout="@layout/tool_bar_layout"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#F0EDED">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/title"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="30dp"
            />


        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:inputType="text"
            android:drawableStart="@drawable/name"
            android:id="@+id/first_name"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:drawableStart="@drawable/name"
            android:id="@+id/last_name"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email"
            android:id="@+id/email"
            />
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:inputType="phone"
            android:drawableStart="@drawable/phone"
            android:id="@+id/phone_number"
            />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/password"
            android:id="@+id/pass_Word"
            />
        <android.support.design.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:layout_gravity="center"
            android:padding="10dp"
            android:width="200dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:id="@+id/button_add"
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>





</LinearLayout>