<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">


        <TextView
            android:drawableLeft="@drawable/email"
            android:id="@+id/email_assign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/first_name_assign"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/name"
                android:layout_marginEnd="5dp"
                android:text="@string/first_name"
                android:padding="2dp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/last_name_assign"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="120dp"
                android:layout_marginTop="0dp"
                android:padding="2dp"
                android:text="@string/last_name"
                android:textColor="#000" />

        </RelativeLayout>

        <!-- edit text and places auto complete-->
        <android.support.design.widget.TextInputEditText
            android:drawableLeft="@drawable/task"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/task_description"
            android:hint="@string/task_description"
            />

        <android.support.design.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:id="@+id/button_add_tasks"
            android:background="@color/colorPrimary"
            />


    </LinearLayout>

</android.support.v7.widget.CardView>