<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:orientation="vertical">
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="1500dp"
         android:layout_height="150dp"
         android:src="@drawable/splash_screen_image"
         android:layout_gravity="center"
         android:layout_marginTop="70dp"
         />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_sign_in"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/email"
        android:padding="10dp"
        android:id="@+id/login_email"
        android:inputType="textEmailAddress"
        />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_sign_in"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:id="@+id/login_password"
        android:drawableStart="@drawable/password"
        />
    <android.support.design.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_signin"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:width="200dp"
        android:id="@+id/sign_in_button"/>
    <android.support.v4.widget.ContentLoadingProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleSmallInverse"
        android:id="@+id/login_progressBar"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>