<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_dashboard"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/tool_bar_layout"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <!-- add employer section-->
            <android.support.v7.widget.CardView
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="43dp"
                android:minHeight="200dp"
                android:id="@+id/add_employer_section">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:src="@drawable/add_employer"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add Employer"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- end of add employer section-->


            <!-- asign task  section-->
            <android.support.v7.widget.CardView
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="43dp"
                android:layout_marginTop="43dp"
                android:minHeight="200dp"
                android:id="@+id/add_task_section">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:src="@drawable/asign_task"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asign_task"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- end of asign task  section-->

            <!-- location section-->
            <android.support.v7.widget.CardView
                android:id="@+id/view_employee_location_section"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/add_employer_section"
                android:layout_marginBottom="103dp"
                android:minHeight="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/employer_location" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/employer_location"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17dp"
                        android:padding="10dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- end of location  section-->


            <!-- profile  section-->
            <android.support.v7.widget.CardView
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/view_employee_location_section"
                android:layout_marginEnd="35dp"
                android:minHeight="200dp"
                android:id="@+id/employer_profile_section">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:src="@drawable/employer_profile"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/employer_profile"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- end of profile  section-->
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        android:layout_gravity ="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/admin_drawer_header_layout">

    </android.support.design.widget.NavigationView>




</android.support.v4.widget.DrawerLayout>